# AT3D

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  conda_env_requirements.yaml  default_config.json  meson.build  pyproject.toml  requirements.txt  setup.py  setup.py.legacy  shdom.txt  test_script.py
ancillary_data/: AFGL_summer_mid_lat.nc  AFGL_summer_mid_lat.txt
at3d/: __init__.py  aerosol.py  callback.py  checks.py  configuration.py  containers.py  exceptions.py  gas_absorption.py  generate.py  gradient.py  grid.py  initialization.py  initialization_workflow.py  medium.py  meson.build  mie.py  optimize.py  parallel.py  preprocessing.py  rayleigh.py  regularization.py  sensor.py  size_distribution.py  solver.py  source.py  space_carve.py  stereo.py  surface.py  transforms.py  uncertainties.py  util.py  visualization.py
at3d/data/: __init__.py  meson.build
at3d/data/OPAC/: convert_libradtran_phase_to_at3d.py
at3d/data/OPAC/aerosol/: size_distr.cfg
at3d/data/OPAC/aerosol/optical_properties/: miam.mie.nc  mitr.mie.nc  soot.mie.nc
at3d/data/ancillary/: AFGL_summer_mid_lat.nc  SpectralSolar_MODWehrli_1985_WMO.npz  afglmw.txt  afglss.txt
at3d/data/reptran/: reptran_solar_coarse.lookup.CH4.cdf  reptran_solar_coarse.lookup.N2.cdf  reptran_solar_coarse.lookup.N2O.cdf  reptran_solar_coarse.lookup.O2.cdf  reptran_solar_coarse.lookup.O3.cdf  reptran_solar_modis.lookup.CH4.cdf  reptran_solar_modis.lookup.CO2.cdf  reptran_solar_modis.lookup.H2O.cdf  reptran_solar_modis.lookup.N2.cdf  reptran_thermal_coarse.cdf  reptran_thermal_coarse.lookup.CO.cdf  reptran_thermal_coarse.lookup.CO2.cdf  reptran_thermal_coarse.lookup.N2.cdf  reptran_thermal_modis.lookup.CH4.cdf  reptran_thermal_modis.lookup.H2O.cdf  reptran_thermal_modis.lookup.N2.cdf  reptran_thermal_modis.lookup.N2O.cdf  reptran_thermal_modis.lookup.O3.cdf
at3d/data/synthetic_cloud_fields/jpl_les/: rico122x106x39.txt  rico32x37x26.txt
docs/: airmspi_extended_grid_data.md  airmspi_geometry_tuning.md  conf.py  coordinate_systems.md  cross_track_vout_map.md  index.rst
lib/: __init__.py  bispectral_retrieval.py  callback.py  checks.py  configuration.py  containers.py  error.py  exceptions.py  generate.py  gradient.py  grid.py  medium.py  mie.py  optimize.py  parallel.py  rayleigh.py  regularization.py  sensor.py  size_distribution.py  solver.py  source.py  space_carve.py  surface.py  transforms.py  uncertainties.py  util.py
notebooks/: AirMSPI Preprocessing.ipynb  AirMSPI Space Carving.ipynb  ApproximateJacobianEvaluation.ipynb  Berkely Camera Network.ipynb  Cloudbow Analysis.ipynb  ExampleForward.ipynb  ExampleScript.ipynb  ExampleScriptGradient.ipynb  Forward Rendering Polarized.ipynb  Forward Rendering.ipynb  Loss Manifold Analysis.ipynb  Make Mie Table Polarized.ipynb  Make Mie Table.ipynb  MakeMieTablesExample.ipynb  MakePolydiserseMie.ipynb  MakeSensors.ipynb  MakingOpticalProperties.ipynb  Mie Polarization Rendering.ipynb  Multispectral Rendering.ipynb  Multiview Rendering.ipynb  Mutiview Rendering.ipynb  Polarization Rendering [Cloudbow].ipynb  Polarization Rendering [Pure Mie].ipynb  Polarization Rendering [Pure Rayleigh].ipynb  Polarization Rendering [Stuc].ipynb  REFACTORING_TESTS_XARRAY.ipynb  REFACTORING_TESTS_XARRAY_aviad.ipynb  Radiance Rendering [Multispectral].ipynb  Radiance Rendering [Multiview].ipynb  Radiance Rendering [Single Image].ipynb  Rayleigh Polarization Rendering.ipynb  RetrievalTest.ipynb  SimpleInverseProblem.ipynb  SimulatingRadiances.ipynb  Single Image Rendering.ipynb  SolveRTE.ipynb  Stcu Polarization Rendering.ipynb  Wavelet_decomposition.ipynb
output/: cross_track_cache.json
pyshdom/: __init__.py  callback.py  checks.py  configuration.py  containers.py  generate.py  gradient.py  grid.py  initialization.py  lut_retrieval.py  medium.py  mie.py  optimize.py  preprocessing.py  rayleigh.py  regularization.py  sensor.py  size_distribution.py  solver.py  source.py  space_carve.py  surface.py  transforms.py  uncertainties.py  util.py  visualization.py
recipe/: meta.yaml
scripts/: README.md  __init__.py  airmspi_crop_data.py  airmspi_image_simulation.py  at3d_environment.yml  at3d_minimal.yml  at3dclass.py  build_grid_data_from_retrieval.py  config_v5b.yaml  config_v6a.yaml  debug.py  estimate_cross_track_from_l1b.py  example_forward_model.py  example_mpi_script.py  example_retrieval.py  forward_single_voxel.py  generate_mie_tables.py  generate_polarized_mie_tables.py  grid_data_builder.py  inverse_extinction_simulation.py  merge_airmspi_nc.py  optimize_extinction.py  optimize_extinction_lbfgs.py  optimize_microphysics.py  optimize_microphysics_lbfgs.py  render_monochromatic_radiance_toa.py  render_polarization_toa.py  render_polychromatic_radiance_toa.py  render_radiance_toa.py  replot_from_saved_simulation.py  utils.py
shdom/: Mie.py  SizeDistributions.py  __init__.py  callback.py  checkpoint.py  checks.py  configuration.py  error.py  example_griddata.py  generate.py  gradient.py  grid.py  medium.py  mie.py  optimize.py  optimizer.py  organization.py  parameters.py  phase.py  rayleigh.py  rte_solver.py  script_util.py  sensor.py  sensor_new.py  size_distribution.py  solver.py  source.py  space_carve.py  surface.py  util.py
shdom_verification/: RenderedSensorReference_nosubpixel.nc  RenderedSensorReference_subpixelargs.nc  brdf_D1f.out  brdf_L1r.out  brdf_O1f.out  brdf_R1f.out  brdf_R1r.out  (+7 more)
(+309 files in other folders)
